feat: Open Source Champs Feature (#55)
* Add featured articles section

* Update featured articles section with new tutorials and resources (#63)

--- a/index.html
+++ b/index.html
@@ -180,6 +180,44 @@
     </div>
   </section>
 
+  <section class="featured-articles">
+    <div class="container">
+      <div class="featured-grid">
+        <div class="card searchable">
+          <h3>Open Source Champions Docs</h3>
+          <ul>
+            <li>Best Lighting Tutorials</li>
+            <li><a href="docs/manuals-and-cheat-sheets/lighting-process/">Lighting Your World Like a Pro - A Step-by-Step Process by virtualpebble</a></li>
+            <li>Best Creating and Importing Assets Tutorials</li>
+            <li><a href="docs/meshes-materials-import/Dynamic-colour-changing-skydome-BlenderToHorizon/">Dynamic Colour Changing Skydome: From Blender to a Horizon World by umlo.769313</a></li>
+            <li><a href="docs/meshes-materials-import/blender-node-hologram/">Turn ANYTHING into a Hologram with Blender Nodes by virtualpebble</a></li>
+            <li>Best Monetization Tutorials</li>
+            <li><a href="docs/monetization/IWP_uRocketLife/">In World Purchases (IWP) Start to Finish by uRocketLife</a></li>
+            <li><a href="docs/interaction/door/">Making an Exclusive VIP Room For Your World by Thrilluwu</a></li>
+            <li>Best NPC Enemy Wave Tutorials</li>
+            <li><a href="docs/scripting-concepts-persistence-apis/WaveSpawner%20Tutorial/">Wave Spawner tutorial by dadbodstudios</a></li>
+            <li>Best Asset Templates Tutorials</li>
+            <li><a href="docs/asset-library-import/Create-Asset-Templates-Street-Lights/">Using Asset Templates in Horizon Worlds: Street Lights by thesloppyguy</a></li>
+            <li><a href="docs/asset-library-import/Exploring-Asset-Templates-by-building-a-maze/">Exploring Asset Templates: Smarter World Building by umlo.769313</a></li>
+          </ul>
+        </div>
+        <div class="card searchable">
+          <h3>Generative AI (GenAI) Tools</h3>
+          <ul>
+            <li><a href="docs/generative-ai-tools/build-a-player-guided-lobby-with-mesh-gen/">Build a player-guided lobby with mesh gen</a></li>
+            <li><a href="docs/generative-ai-tools/code-faster-with-copilot-in-the-Worlds-desktop-editor-&-VSCode/">Code faster with Copilot in the Worlds desktop editor & VSCode</a></li>
+            <li><a href="docs/generative-ai-tools/genAI-sound-design-in-Worlds-audio-tools-tour/">GenAI sound design in Worlds - audio tools tour</a></li>
+            <li><a href="docs/generative-ai-tools/genAI-world-concepts-greyboxing-and-refinements/">GenAI world concepts - greyboxing and refinements</a></li>
+            <li><a href="docs/generative-ai-tools/hands-on-with-GenAI-toolkit-for-Worlds-full-feature-tour/">Hands-on with GenAI toolkit for Worlds - full feature tour</a></li>
+            <li><a href="docs/generative-ai-tools/prompt-Meta-AI-in-the-Worlds-desktop-editor/">Prompt Meta AI in the Worlds desktop editor</a></li>
+            <li><a href="docs/generative-ai-tools/scripting-with-AI-support-GenAI-TypeScript/">Scripting with AI support - GenAI TypeScript</a></li>
+            <li><a href="docs/generative-ai-tools/topology-tune-up-for-GenAI-props-and-sets/">Topology tune up for GenAI props and sets</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="get-started" class="get-started">
     <div class="container">
       <div class="get-started-text">
@@ -204,27 +242,6 @@
             </li>
             <li><a href="docs/understanding-the-desktop-editor/Worlds-desktop-tools-basics/">Worlds desktop tools
                 basics</a></li>
-          </ul>
-        </div>
-        <div class="card searchable">
-          <h3>Generative AI (GenAI) Tools</h3>
-          <ul>
-            <li><a href="docs/generative-ai-tools/build-a-player-guided-lobby-with-mesh-gen/">Build a player-guided
-                lobby with mesh gen</a></li>
-            <li><a href="docs/generative-ai-tools/code-faster-with-copilot-in-the-Worlds-desktop-editor-&-VSCode/">Code
-                faster with Copilot in the Worlds desktop editor & VSCode</a></li>
-            <li><a href="docs/generative-ai-tools/genAI-sound-design-in-Worlds-audio-tools-tour/">GenAI sound design in
-                Worlds - audio tools tour</a></li>
-            <li><a href="docs/generative-ai-tools/genAI-world-concepts-greyboxing-and-refinements/">GenAI world concepts
-                - greyboxing and refinements</a></li>
-            <li><a href="docs/generative-ai-tools/hands-on-with-GenAI-toolkit-for-Worlds-full-feature-tour/">Hands-on
-                with GenAI toolkit for Worlds - full feature tour</a></li>
-            <li><a href="docs/generative-ai-tools/prompt-Meta-AI-in-the-Worlds-desktop-editor/">Prompt Meta AI in the
-                Worlds desktop editor</a></li>
-            <li><a href="docs/generative-ai-tools/scripting-with-AI-support-GenAI-TypeScript/">Scripting with AI support
-                - GenAI TypeScript</a></li>
-            <li><a href="docs/generative-ai-tools/topology-tune-up-for-GenAI-props-and-sets/">Topology tune up for GenAI
-                props and sets</a></li>
           </ul>
         </div>
         <div class="card searchable">
